# advent-of-code

./: .gitignore  functions.py  pyproject.toml
02/: 01.py  02.py  input.txt
03/: 01.py  02.py
04/: 01.py
05/: 01.py
06/: 01.py
07/: 01.py
08/: 01.py
2018/01/: 02.py
2018/03/: 01.py
2018/08/: 01.py
2018/09/: 01.py
2019/: intcode.py  op.py  util.py
2019/day01/: main.py  tests.py
2019/day02/: tests.py
2019/day04/: tests.py
2019/day05/: main.py  tests.py
2019/day06/: main.py  tests.py
2019/day07/: main.py  tests.py
2019/day08/: main.py  tests.py
python/01/: day_01.py  main.py
python/02/: day_02.py
python/03/: main.py
python/2018/01/: 01.py
python/2018/04/: 02.py
python/2018/05/: 01.py  02.py
python/2018/07/: 01.py
python/2018/08/: 01.py
python/2019/: helpers.py  intcode.py
python/2019/day02/: main.py
python/2019/day03/: main.py  tests.py
python/2019/day04/: main.py
python/2019/day06/: main.py  tests.py
python/2019/day07/: main.py
python/2020/01/: main.py  test.py
python/2020/02/: main.py  test.py
python/2020/03/: main.py  test.py
python/2021/01/: main.py
python/2021/02/: main.py
python/2021/03/: main.py
python/2021/04/: main.py
python/2021/05/: main.py  test.py
python/2021/06/: main.py  test.py
python/2021/07/: main.py
python/2021/08/: main.py  test.py
python/2021/09/: main.py  test.py
python/2021/10/: main.py  test.py
python/2022/01/: main.py  test.py
python/2022/02/: main.py  test.py
python/2022/03/: main.py  test.py
python/grid/: __init__.py  grid.py  util.py
(+46 files in other folders)
