[tool.poetry]
name = "aoc-2021"
version = "0.1.0"
description = ""
authors = ["Andy Honeycutt <ahoneycutt@accendero.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
